Fixed Activity stream not showing up alongside Sign Up

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -208,3 +208,7 @@ h3 {
   margin-left: 20px;
   color: #B94A48;
 }
+
+.span8 {
+  width: 550px;
+}
